# This file is part of OpenTSS.
# Copyright (C) 2022 LatticeX Foundation.
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
[package]
name = "multi-party-ecdsa"
version = "0.1.2"
edition = "2018"
authors = [
    "songxuyang <xuyangsong1012@gmail.com>",
    "wanghailong",
    "wangxueli <snowdawn16@gmail.com>" 
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "cryptography",
]

[lib]
crate-type= ["lib"]

[dependencies]
classgroup = {path = "../classgroup"}
libc = "0.2.0"
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_derive="1.0"
serde_json="1.0"
bincode = "1.3.1"
zeroize = "1.3.0"
time = "0.1"
hex = { version = "0.4", features = ["serde"] }
rand = "0.7"
curve25519-dalek = { version = "3", features = ["serde"] }
thiserror = "1"
sha2 = "0.9"
sha3 = "0.9"
# use https://github.com/ZenGo-X/curv.git -b 44537a74 (which fixs deserialization, of v0.9.0)
curv = { package = "curv-kzen", git="https://github.com/ZenGo-X/curv.git", rev="44537a74"}


lazy_static = "1.4.0"
log = "0.4.6"
anyhow = "1.0"

crossbeam = "0.8"
crossbeam-channel = "0.5"


[dev-dependencies]
criterion = "0.3"
rust-crypto = "0.2"
hex = "0.4"
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
libsecp256k1 = "0.3.2"
